@@ -129,6 +129,7 @@
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
                         <arg>-parameters</arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
